    canonicalization to perform.  Accepted values are WA_KRB5_CANON_LOCAL
    (to call krb5_aname_to_localname), WA_KRB5_CANON_STRIP (to strip any
    realm), and WA_KRB5_CANON_NONE (to return the fully-qualified
    principal).

 *) In the WebLogin script, work around a bug in the CGI module that
    causes it to misparse and die on WebLogin URLs that contain two
    slashes and two plus signs.

 *) WebLogin now supports a new configuration variable, $DEFAULT_REALM.
    If set, WebLogin will append @ and $DEFAULT_REALM to usernames that do
    not contain @ before passing them to the WebKDC.  This is primarily
    useful if principals should be authenticated in a different Kerberos
    realm than the default realm of the WebKDC.

 *) WebLogin now supports a new configuration file, $BYPASS_CONFIRM.  If
    set, the confirmation page will only be displayed if required by the
    HTTP protocol after a POST of the login form.  Otherwise, the user
    will be silently redirected to the destination site.

 *) Add support for a map_username function defined in the WebLogin config
    file.  If defined, this function will be called to map the
    user-supplied username to a Kerberos principal for authentication.

 *) Add support for a record_login function defined in the WebLogin config
    file.  If defined, this function will be called after any successful
    authentication.

 *) Many of the REMOTE_USER configuration variables have been renamed for
    consistency.  The old names are still supported for backward
    compatibility.  $REALM has been deprecated in favor of setting
    @REMUSER_REALMS to a list with a single value.

 *) Ensure the weblogin-config documentation includes explicit defaults
    for all of the possible configuration variables.

 *) Escape Mac OS X compiler flags for apxs, fixing build issues on Mac OS
    X 10.5.

 *) Remove the maxlength restriction on the username entry box in the
    example login.tmpl template.
